--- a/Movies_Clustering.ipynb
+++ b/Movies_Clustering.ipynb
@@ -913,7 +913,7 @@
    "source": [
     "# Let's turn our dataset into a list\n",
     "X = biased_dataset[['avg_scifi_rating','avg_romance_rating']].values\n",
-    "Import sklearn\n",
+    "import sklearn\n",
     "from sklearn.cluster import KMeans\n",
     "# Create an instance of KMeans to find two clusters\n",
     "kmeans_1 = KMeans(n_clusters=2)\n",
